# pyesminilib

./: .gitignore  LICENSE  README.md  pixi.toml  pyproject.toml  setup.py
esmini/: __init__.py  _build_esmini.py  _esmini_cffi.pyi  _version.py  scenario_manager.py
examples/: external_ego_control_position.py  hello_world.py  register_object_callback_example.py  test-driver.xosc  test_driver.py
src/esmini/: __init__.py  _build_esmini.py  _version.py
