[project]
name = "pyesminilib"
license = { text = "MIT" }
dynamic = ["version"]
dependencies = ["cffi>=1.0", "urllib3~=2.2"]


# [tool.setuptools]
# packages = ["esmini"]
[tool.setuptools.packages.find]
where = ["src"]
include = ["esmini*"]

[tool.setuptools_scm]
version_file = "src/esmini/_version.py"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "cffi>=1.0", "urllib3~=2.2"]
build-backend = "setuptools.build_meta"

[tool.mypy]
packages = ["esmini"]
# ignore_missing_imports = true
show_error_codes = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["esmini._esmini_cffi", "esmini._esmini_cffi.*"]

[tool.ruff]
line-length = 127

[tool.ruff.lint]
select = ["E", "F", "W", "N", "B", "ANN", "PYI"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.per-file-ignores]
"*.py" = ["B905", "E203", "E501", "W291", "W293"]
"*.pyi" = ["B", "E501", "E701"]

[tool.flake8]
max-line-length = 127
max-complexity = 10
per-file-ignores = [
  "__init__.py: F401",
  "__init__.pyi: F401",
  "*.py: B905, B907, B950, E203, E501, W503, W291, W293",
  "*.pyi: B, E301, E302, E305, E501, E701, E704, W503",
]


[tool.isort]
profile = "black"
line_length = 127
skip_gitignore = false
group_by_package = true

[tool.black]
line-length = 127
